@@ -5,6 +5,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 * Verilator 4.031 devel
 
+***   Add setting VM_PARALLEL_BUILDS=1 when using --output-split, #2185.
+
 
 * Verilator 4.030 2020-03-08
 
